# server.js
@@ -13,6 +13,7 @@ require('./src/middleware/passport');
 
 const authRoutes = require('./src/routes/authRoutes');
 const characterRoutes = require('./src/routes/characterRoutes');
+const storyArcRoutes = require('./src/routes/storyArcRoutes');
 const { ensureAuthenticated } = require('./src/middleware/authMiddleware');
 
 if (!process.env.MONGO_URI) {
@@ -73,6 +74,7 @@ app.get('/', (req, res) => {
 });
 app.use('/auth', authRoutes);
 app.use('/api/characters', characterRoutes);
+app.use('/api/story-arc', storyArcRoutes);
 
 app.use(
   '/api-docs',
