# src/routes/characterRoutes.js
@@ -3,18 +3,28 @@ const router = express.Router();
 const characterController = require('../controllers/characterController');
 
 // GET all characters
-router.get('/', characterController.getAllCharacters);
+router.get('/', 
+    //#swagger.tags = ['Characters']
+    characterController.getAllCharacters);
 
 // GET a specific character by ID
-router.get('/:id', characterController.getCharacterById);
+router.get('/:id', 
+    /* #swagger.tags = ['Characters'] */
+    characterController.getCharacterById);
 
 // POST a new character
-router.post('/', characterController.createCharacter);
+router.post('/', 
+    /* #swagger.tags = ['Characters'] */
+    characterController.createCharacter);
 
 // PUT/PATCH to update a character
-router.put('/:id', characterController.updateCharacter);
+router.put('/:id', 
+    /* #swagger.tags = ['Characters'] */
+    characterController.updateCharacter);
 
 // DELETE a character
-router.delete('/:id', characterController.deleteCharacter);
+router.delete('/:id', 
+    /* #swagger.tags = ['Characters'] */
+    characterController.deleteCharacter);
 
 module.exports = router;
